setting up to push to Heroku

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,6 +1,6 @@
 
 <div class="mb-3">
-    <div class="alert alert-primary" role="alert"> dont have an account ? <a href="signin">sign up now</a> </div>
+    <div class="alert alert-primary" role="alert"> dont have an account ? <a href="signup">sign up now</a> </div>
 </div>
 <form action="/signin" method="post" style="padding: 10%;">
   <div class="mb-3">
