--- a/views/test.hbs
+++ b/views/test.hbs
@@ -3,15 +3,15 @@
     {{#each this}}
         <div class="col">
             <div class="card h-100">
-                <img src= {{this.img}} class="card-img-top" alt="...">
+                <img src= {{this.productImg}} class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title"> {{this.tit}} </h5>
-                    <p class="card-text"> {{this.info}} </p>
+                    <h5 class="card-title"> {{this.productName}} </h5>
+                    <p class="card-text"> {{this.productPrice}} $ </p>
                 </div>
                 <div class="card-footer">
                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                        <button type="button" class="btn btn-dark">Add to cart</button>
-                        <button type="button" class="btn btn-danger">ignore</button>
+                        <a href="cart/{{this._id}}/{{this.productPrice}}"><button type="button" class="btn btn-dark">Add to cart</button></a>
+                        <a href=""><button type="button" class="btn btn-danger">ignore</button></a>
                     </div>
                 </div>
             </div>
