--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="/stylesheets/boot.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  </head>
-  <body>
-      <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-cart-shopping-fast"></i><i class="fa-solid fa-chess">MAzhari store</i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav" style="padding-left: 70%;">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">about</a>
-        </li>
-        {{#if ishbs}}
-        <li class="nav-item">
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="/stylesheets/boot.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><i class="fa-solid fa-cart-shopping-fast"></i><i
+          class="fa-solid fa-chess">MAzhari store</i></a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav" style="padding-left: 70%;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">about</a>
+          </li>
+          {{#if ishbs}}
+          <li class="nav-item">
             <a class="btn btn-danger" href="logout">logout</a>
-        </li>
+          </li>
           {{else}}
-        <li>
+          <li>
             <a class="nav-link" href="signup">singup</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="signin">login</a>
-        </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="signin">login</a>
+          </li>
           {{/if}}
-        <li>
-          <a href="usercart" type="button" class="btn btn-warning"><i class="fa-solid fa-cart-shopping-fast"></i>cart</a>
-        </li>
-      </ul>
+          <li>
+            <a href="usercart" type="button" class="btn btn-warning"><i
+                class="fa-solid fa-cart-shopping-fast"></i>cart</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-    {{{body}}}
-  </body>
+  </nav>
+  {{{body}}}
+</body>
+
 </html>
