--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,8 +13,8 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><i class="fa-solid fa-cart-shopping-fast"></i><i
           class="fa-solid fa-chess">MAzhari store</i></a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav" style="padding-left: 70%;">
+      <div class="navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">about</a>
           </li>
